Git_WGBH_QC/src/objects/WGBH_Paperwork_Contact__c.object
<CustomObject>
    <description>The WGBH Employee responsible for handling paperwork for a hire/employee/department</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>The unique code of the contact identifying the record</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The employee&apos;s name</description>
        <label>Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the employee an active paperwork contact?</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The last name of the paperwork contact</description>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WGBH Paperwork Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>WGBH Paperwork Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGBH Paperwork Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>